--- a/output.css
+++ b/output.css
@@ -6,7 +6,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(0.637 0.237 25.331);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -222,20 +221,11 @@
   .-top-2 {
     top: calc(var(--spacing) * -2);
   }
-  .-top-3 {
-    top: calc(var(--spacing) * -3);
-  }
-  .-top-4 {
-    top: calc(var(--spacing) * -4);
-  }
   .-top-8 {
     top: calc(var(--spacing) * -8);
   }
   .-top-10 {
     top: calc(var(--spacing) * -10);
-  }
-  .-top-20 {
-    top: calc(var(--spacing) * -20);
   }
   .-top-23 {
     top: calc(var(--spacing) * -23);
@@ -254,9 +244,6 @@
   }
   .-top-45 {
     top: calc(var(--spacing) * -45);
-  }
-  .-top-50 {
-    top: calc(var(--spacing) * -50);
   }
   .-top-62 {
     top: calc(var(--spacing) * -62);
@@ -303,9 +290,6 @@
   .-right-15 {
     right: calc(var(--spacing) * -15);
   }
-  .-right-20 {
-    right: calc(var(--spacing) * -20);
-  }
   .-right-24 {
     right: calc(var(--spacing) * -24);
   }
@@ -339,17 +323,11 @@
   .right-15 {
     right: calc(var(--spacing) * 15);
   }
-  .-bottom-0 {
-    bottom: calc(var(--spacing) * -0);
-  }
   .-bottom-5 {
     bottom: calc(var(--spacing) * -5);
   }
   .-bottom-10 {
     bottom: calc(var(--spacing) * -10);
-  }
-  .-bottom-12 {
-    bottom: calc(var(--spacing) * -12);
   }
   .-bottom-13 {
     bottom: calc(var(--spacing) * -13);
@@ -357,20 +335,8 @@
   .-bottom-20 {
     bottom: calc(var(--spacing) * -20);
   }
-  .-bottom-22 {
-    bottom: calc(var(--spacing) * -22);
-  }
-  .-bottom-30 {
-    bottom: calc(var(--spacing) * -30);
-  }
-  .-bottom-40 {
-    bottom: calc(var(--spacing) * -40);
-  }
   .-bottom-42 {
     bottom: calc(var(--spacing) * -42);
-  }
-  .-bottom-50 {
-    bottom: calc(var(--spacing) * -50);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -401,9 +367,6 @@
   }
   .-left-15 {
     left: calc(var(--spacing) * -15);
-  }
-  .-left-20 {
-    left: calc(var(--spacing) * -20);
   }
   .-left-24 {
     left: calc(var(--spacing) * -24);
@@ -501,14 +464,8 @@
   .h-\[1px\] {
     height: 1px;
   }
-  .h-\[82vw\] {
-    height: 82vw;
-  }
   .h-\[92vw\] {
     height: 92vw;
-  }
-  .h-\[102vw\] {
-    height: 102vw;
   }
   .h-auto {
     height: auto;
@@ -570,12 +527,6 @@
   .w-\[70vw\] {
     width: 70vw;
   }
-  .w-\[80vw\] {
-    width: 80vw;
-  }
-  .w-\[90vw\] {
-    width: 90vw;
-  }
   .w-full {
     width: 100%;
   }
@@ -632,9 +583,6 @@
   .-rotate-15 {
     rotate: calc(15deg * -1);
   }
-  .-rotate-20 {
-    rotate: calc(20deg * -1);
-  }
   .-rotate-30 {
     rotate: calc(30deg * -1);
   }
@@ -643,9 +591,6 @@
   }
   .rotate-15 {
     rotate: 15deg;
-  }
-  .rotate-20 {
-    rotate: 20deg;
   }
   .rotate-30 {
     rotate: 30deg;
@@ -748,10 +693,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-3 {
     border-style: var(--tw-border-style);
     border-width: 3px;
@@ -764,9 +705,6 @@
   }
   .border-black {
     border-color: var(--color-black);
-  }
-  .border-red-500 {
-    border-color: var(--color-red-500);
   }
   .border-white {
     border-color: var(--color-white);
@@ -893,9 +831,6 @@
   .opacity-50 {
     opacity: 50%;
   }
-  .opacity-100 {
-    opacity: 100%;
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -975,6 +910,11 @@
       --tw-scale-y: 95%;
       --tw-scale-z: 95%;
       scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .sm\:hidden {
+    @media (width >= 40rem) {
+      display: none;
     }
   }
   .sm\:w-50 {
@@ -1082,11 +1022,6 @@
       right: calc(var(--spacing) * 35);
     }
   }
-  .md\:-bottom-0 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -0);
-    }
-  }
   .md\:-bottom-5 {
     @media (width >= 48rem) {
       bottom: calc(var(--spacing) * -5);
@@ -1107,44 +1042,14 @@
       bottom: calc(var(--spacing) * -25);
     }
   }
-  .md\:-bottom-30 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -30);
-    }
-  }
   .md\:-bottom-40 {
     @media (width >= 48rem) {
       bottom: calc(var(--spacing) * -40);
     }
   }
-  .md\:-bottom-42 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -42);
-    }
-  }
-  .md\:-bottom-50 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -50);
-    }
-  }
-  .md\:-bottom-60 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -60);
-    }
-  }
   .md\:-bottom-75 {
     @media (width >= 48rem) {
       bottom: calc(var(--spacing) * -75);
-    }
-  }
-  .md\:-bottom-80 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * -80);
-    }
-  }
-  .md\:bottom-30 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * 30);
     }
   }
   .md\:-left-2 {
@@ -1252,19 +1157,9 @@
       width: 45%;
     }
   }
-  .md\:w-\[50\%\] {
-    @media (width >= 48rem) {
-      width: 50%;
-    }
-  }
   .md\:w-\[50vw\] {
     @media (width >= 48rem) {
       width: 50vw;
-    }
-  }
-  .md\:w-\[70\%\] {
-    @media (width >= 48rem) {
-      width: 70%;
     }
   }
   .md\:scale-150 {
@@ -1356,6 +1251,13 @@
       line-height: var(--tw-leading, var(--text-8xl--line-height));
     }
   }
+  .md\:sm\:hidden {
+    @media (width >= 48rem) {
+      @media (width >= 40rem) {
+        display: none;
+      }
+    }
+  }
   .lg\:-top-8 {
     @media (width >= 64rem) {
       top: calc(var(--spacing) * -8);
@@ -1386,19 +1288,9 @@
       top: calc(var(--spacing) * -45);
     }
   }
-  .lg\:-top-50 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * -50);
-    }
-  }
   .lg\:-top-62 {
     @media (width >= 64rem) {
       top: calc(var(--spacing) * -62);
-    }
-  }
-  .lg\:-top-70 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * -70);
     }
   }
   .lg\:-top-81 {
@@ -1456,39 +1348,14 @@
       bottom: calc(var(--spacing) * -10);
     }
   }
-  .lg\:-bottom-15 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * -15);
-    }
-  }
-  .lg\:-bottom-20 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * -20);
-    }
-  }
   .lg\:-bottom-30 {
     @media (width >= 64rem) {
       bottom: calc(var(--spacing) * -30);
     }
   }
-  .lg\:-bottom-40 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * -40);
-    }
-  }
-  .lg\:-bottom-50 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * -50);
-    }
-  }
   .lg\:-bottom-55 {
     @media (width >= 64rem) {
       bottom: calc(var(--spacing) * -55);
-    }
-  }
-  .lg\:-bottom-60 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * -60);
     }
   }
   .lg\:-bottom-100 {
@@ -1504,11 +1371,6 @@
   .lg\:-left-12 {
     @media (width >= 64rem) {
       left: calc(var(--spacing) * -12);
-    }
-  }
-  .lg\:-left-30 {
-    @media (width >= 64rem) {
-      left: calc(var(--spacing) * -30);
     }
   }
   .lg\:left-5 {
@@ -1581,19 +1443,9 @@
       width: 25%;
     }
   }
-  .lg\:w-\[45\%\] {
-    @media (width >= 64rem) {
-      width: 45%;
-    }
-  }
   .lg\:w-\[55\%\] {
     @media (width >= 64rem) {
       width: 55%;
-    }
-  }
-  .lg\:w-\[65\%\] {
-    @media (width >= 64rem) {
-      width: 65%;
     }
   }
   .lg\:w-\[70\%\] {
