--- a/output.css
+++ b/output.css
@@ -9,11 +9,16 @@
     --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-green-400: oklch(0.792 0.209 151.711);
+    --color-green-500: oklch(0.723 0.219 149.579);
     --color-green-600: oklch(0.627 0.194 149.214);
+    --color-blue-50: oklch(0.97 0.014 254.604);
+    --color-blue-100: oklch(0.932 0.032 255.585);
+    --color-blue-500: oklch(0.623 0.214 259.815);
     --color-gray-200: oklch(0.928 0.006 264.531);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-xs: 20rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -41,7 +46,6 @@
     --font-weight-bold: 700;
     --radius-sm: 0.25rem;
     --radius-lg: 0.5rem;
-    --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
     --radius-3xl: 1.5rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -275,9 +279,6 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
-  .top-2 {
-    top: calc(var(--spacing) * 2);
-  }
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
@@ -434,6 +435,9 @@
   .left-15 {
     left: calc(var(--spacing) * 15);
   }
+  .-z-0 {
+    z-index: calc(0 * -1);
+  }
   .-z-1 {
     z-index: calc(1 * -1);
   }
@@ -469,6 +473,12 @@
   }
   .ms-auto {
     margin-inline-start: auto;
+  }
+  .-mt-5 {
+    margin-top: calc(var(--spacing) * -5);
+  }
+  .-mt-50 {
+    margin-top: calc(var(--spacing) * -50);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -548,11 +558,14 @@
   .max-h-\[80vh\] {
     max-height: 80vh;
   }
-  .max-h-\[90vh\] {
-    max-height: 90vh;
-  }
   .max-h-\[340px\] {
     max-height: 340px;
+  }
+  .min-h-5 {
+    min-height: calc(var(--spacing) * 5);
+  }
+  .min-h-\[300px\] {
+    min-height: 300px;
   }
   .min-h-screen {
     min-height: 100vh;
@@ -629,11 +642,11 @@
   .max-w-\[90\%\] {
     max-width: 90%;
   }
-  .max-w-\[90vw\] {
-    max-width: 90vw;
-  }
   .max-w-full {
     max-width: 100%;
+  }
+  .max-w-xs {
+    max-width: var(--container-xs);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -674,10 +687,6 @@
   }
   .scale-x-\[-1\] {
     --tw-scale-x: -1;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-y-\[-1\] {
-    --tw-scale-y: -1;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .-rotate-15 {
@@ -785,6 +794,9 @@
   .overflow-visible {
     overflow: visible;
   }
+  .overflow-x-auto {
+    overflow-x: auto;
+  }
   .overflow-x-hidden {
     overflow-x: hidden;
   }
@@ -808,9 +820,6 @@
   }
   .rounded-sm {
     border-radius: var(--radius-sm);
-  }
-  .rounded-xl {
-    border-radius: var(--radius-xl);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -841,11 +850,23 @@
   .border-black {
     border-color: var(--color-black);
   }
+  .border-blue-500 {
+    border-color: var(--color-blue-500);
+  }
+  .border-green-500 {
+    border-color: var(--color-green-500);
+  }
   .border-red-500 {
     border-color: var(--color-red-500);
   }
   .border-white {
     border-color: var(--color-white);
+  }
+  .bg-\[v\] {
+    background-color: v;
+  }
+  .bg-\[var\(--\)\] {
+    background-color: var(--);
   }
   .bg-\[var\(--last-color\)\] {
     background-color: var(--last-color);
@@ -853,11 +874,26 @@
   .bg-\[var\(--primary-color\)\] {
     background-color: var(--primary-color);
   }
+  .bg-\[var\(--quartenary-color\)\] {
+    background-color: var(--quartenary-color);
+  }
+  .bg-\[var\(--quatenary-color\)\] {
+    background-color: var(--quatenary-color);
+  }
+  .bg-\[var\(--quaternary\)\] {
+    background-color: var(--quaternary);
+  }
+  .bg-\[var\(--quaternary-color\)\] {
+    background-color: var(--quaternary-color);
+  }
   .bg-\[var\(--secondary-color\)\] {
     background-color: var(--secondary-color);
   }
   .bg-\[var\(--secondary-color-transparant\)\] {
     background-color: var(--secondary-color-transparant);
+  }
+  .bg-\[var\(--ter-color\)\] {
+    background-color: var(--ter-color);
   }
   .bg-\[var\(--tertiary-color\)\] {
     background-color: var(--tertiary-color);
@@ -865,8 +901,8 @@
   .bg-\[var\(--tertiary-color-transparant\)\] {
     background-color: var(--tertiary-color-transparant);
   }
-  .bg-black {
-    background-color: var(--color-black);
+  .bg-\[var\(--tertiary-color-transparant2\)\] {
+    background-color: var(--tertiary-color-transparant2);
   }
   .bg-green-600 {
     background-color: var(--color-green-600);
@@ -894,9 +930,6 @@
   }
   .object-center {
     object-position: center;
-  }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -934,8 +967,14 @@
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
   }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
+  }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
@@ -943,14 +982,17 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
-  .py-6 {
-    padding-block: calc(var(--spacing) * 6);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
   .py-15 {
     padding-block: calc(var(--spacing) * 15);
+  }
+  .py-25 {
+    padding-block: calc(var(--spacing) * 25);
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
   }
   .pt-25 {
     padding-top: calc(var(--spacing) * 25);
@@ -958,11 +1000,17 @@
   .pt-50 {
     padding-top: calc(var(--spacing) * 50);
   }
+  .pb-0 {
+    padding-bottom: calc(var(--spacing) * 0);
+  }
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
   }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -1008,6 +1056,12 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-ellipsis {
+    text-overflow: ellipsis;
+  }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
   .text-\[var\(--primary-color\)\] {
     color: var(--primary-color);
   }
@@ -1017,11 +1071,23 @@
   .text-black {
     color: var(--color-black);
   }
+  .text-blue-50 {
+    color: var(--color-blue-50);
+  }
+  .text-blue-100 {
+    color: var(--color-blue-100);
+  }
   .text-gray-200 {
     color: var(--color-gray-200);
   }
+  .text-red-500 {
+    color: var(--color-red-500);
+  }
   .text-white {
     color: var(--color-white);
+  }
+  .uppercase {
+    text-transform: uppercase;
   }
   .underline {
     text-decoration-line: underline;
@@ -1036,10 +1102,6 @@
   }
   .opacity-50 {
     opacity: 50%;
-  }
-  .shadow-lg {
-    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -1197,6 +1259,11 @@
   .sm\:w-50 {
     @media (width >= 40rem) {
       width: calc(var(--spacing) * 50);
+    }
+  }
+  .sm\:rounded-lg {
+    @media (width >= 40rem) {
+      border-radius: var(--radius-lg);
     }
   }
   .sm\:pb-50 {
@@ -1490,6 +1557,11 @@
   .md\:py-30 {
     @media (width >= 48rem) {
       padding-block: calc(var(--spacing) * 30);
+    }
+  }
+  .md\:pt-30 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 30);
     }
   }
   .md\:pt-80 {
@@ -1804,6 +1876,11 @@
       padding-block: calc(var(--spacing) * 15);
     }
   }
+  .lg\:pt-5 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 5);
+    }
+  }
   .lg\:pt-50 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 50);
@@ -1849,6 +1926,11 @@
     @media (width >= 64rem) {
       font-size: var(--text-xs);
       line-height: var(--tw-leading, var(--text-xs--line-height));
+    }
+  }
+  .rtl\:text-right {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      text-align: right;
     }
   }
 }
