--- a/output.css
+++ b/output.css
@@ -9,16 +9,12 @@
     --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-green-400: oklch(0.792 0.209 151.711);
-    --color-green-500: oklch(0.723 0.219 149.579);
     --color-green-600: oklch(0.627 0.194 149.214);
-    --color-blue-50: oklch(0.97 0.014 254.604);
     --color-blue-100: oklch(0.932 0.032 255.585);
-    --color-blue-500: oklch(0.623 0.214 259.815);
     --color-gray-200: oklch(0.928 0.006 264.531);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-xs: 20rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -435,9 +431,6 @@
   .left-15 {
     left: calc(var(--spacing) * 15);
   }
-  .-z-0 {
-    z-index: calc(0 * -1);
-  }
   .-z-1 {
     z-index: calc(1 * -1);
   }
@@ -446,6 +439,9 @@
   }
   .z-1 {
     z-index: 1;
+  }
+  .z-9 {
+    z-index: 9;
   }
   .z-10 {
     z-index: 10;
@@ -458,6 +454,15 @@
   }
   .z-9999 {
     z-index: 9999;
+  }
+  .col-span-full {
+    grid-column: 1 / -1;
+  }
+  .m-5 {
+    margin: calc(var(--spacing) * 5);
+  }
+  .m-26 {
+    margin: calc(var(--spacing) * 26);
   }
   .-mx-1 {
     margin-inline: calc(var(--spacing) * -1);
@@ -474,14 +479,11 @@
   .ms-auto {
     margin-inline-start: auto;
   }
-  .-mt-5 {
-    margin-top: calc(var(--spacing) * -5);
-  }
-  .-mt-50 {
-    margin-top: calc(var(--spacing) * -50);
-  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
   }
   .mt-5 {
     margin-top: calc(var(--spacing) * 5);
@@ -561,12 +563,6 @@
   .max-h-\[340px\] {
     max-height: 340px;
   }
-  .min-h-5 {
-    min-height: calc(var(--spacing) * 5);
-  }
-  .min-h-\[300px\] {
-    min-height: 300px;
-  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -644,9 +640,6 @@
   }
   .max-w-full {
     max-width: 100%;
-  }
-  .max-w-xs {
-    max-width: var(--container-xs);
   }
   .border-collapse {
     border-collapse: collapse;
@@ -829,10 +822,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-3 {
     border-style: var(--tw-border-style);
     border-width: 3px;
@@ -850,23 +839,8 @@
   .border-black {
     border-color: var(--color-black);
   }
-  .border-blue-500 {
-    border-color: var(--color-blue-500);
-  }
-  .border-green-500 {
-    border-color: var(--color-green-500);
-  }
-  .border-red-500 {
-    border-color: var(--color-red-500);
-  }
   .border-white {
     border-color: var(--color-white);
-  }
-  .bg-\[v\] {
-    background-color: v;
-  }
-  .bg-\[var\(--\)\] {
-    background-color: var(--);
   }
   .bg-\[var\(--last-color\)\] {
     background-color: var(--last-color);
@@ -874,26 +848,11 @@
   .bg-\[var\(--primary-color\)\] {
     background-color: var(--primary-color);
   }
-  .bg-\[var\(--quartenary-color\)\] {
-    background-color: var(--quartenary-color);
-  }
-  .bg-\[var\(--quatenary-color\)\] {
-    background-color: var(--quatenary-color);
-  }
-  .bg-\[var\(--quaternary\)\] {
-    background-color: var(--quaternary);
-  }
-  .bg-\[var\(--quaternary-color\)\] {
-    background-color: var(--quaternary-color);
-  }
   .bg-\[var\(--secondary-color\)\] {
     background-color: var(--secondary-color);
   }
   .bg-\[var\(--secondary-color-transparant\)\] {
     background-color: var(--secondary-color-transparant);
-  }
-  .bg-\[var\(--ter-color\)\] {
-    background-color: var(--ter-color);
   }
   .bg-\[var\(--tertiary-color\)\] {
     background-color: var(--tertiary-color);
@@ -982,14 +941,8 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
   .py-15 {
     padding-block: calc(var(--spacing) * 15);
-  }
-  .py-25 {
-    padding-block: calc(var(--spacing) * 25);
   }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
@@ -1056,12 +1009,6 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-ellipsis {
-    text-overflow: ellipsis;
-  }
-  .whitespace-nowrap {
-    white-space: nowrap;
-  }
   .text-\[var\(--primary-color\)\] {
     color: var(--primary-color);
   }
@@ -1070,9 +1017,6 @@
   }
   .text-black {
     color: var(--color-black);
-  }
-  .text-blue-50 {
-    color: var(--color-blue-50);
   }
   .text-blue-100 {
     color: var(--color-blue-100);
@@ -1554,11 +1498,6 @@
       padding-block: calc(var(--spacing) * 25);
     }
   }
-  .md\:py-30 {
-    @media (width >= 48rem) {
-      padding-block: calc(var(--spacing) * 30);
-    }
-  }
   .md\:pt-30 {
     @media (width >= 48rem) {
       padding-top: calc(var(--spacing) * 30);
@@ -1958,6 +1897,9 @@ html, body {
 .font-crimson {
   font-family: "Crimson Text", serif;
 }
+.font-roboto {
+  font-family: "Roboto Slab", sans-serif;
+}
 .orn-2-couple-left, .orn-2-couple-right, .orn-39-quote-left, .orn-39-quote-right, .orn-3-quote-left, .orn-3-quote-right {
   transform-origin: 50% 100%;
 }
@@ -2189,149 +2131,4 @@ html, body {
 }
 @property --tw-hue-rotate {
   syntax: "*";
-  inherits: false;
-}
-@property --tw-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-sepia {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-drop-shadow {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-blur {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-brightness {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-contrast {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-grayscale {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-hue-rotate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-invert {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-opacity {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-saturate {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-backdrop-sepia {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes wiggle {
-  0%, 100% {
-    transform: rotate(-3deg);
-  }
-  50% {
-    transform: rotate(3deg);
-  }
-}
-@keyframes wiggle-more {
-  0%, 100% {
-    transform: rotate(-12deg);
-  }
-  50% {
-    transform: rotate(12deg);
-  }
-}
-@keyframes jump {
-  0%, 100% {
-    transform: scale(1);
-  }
-  10% {
-    transform: scale(0.8);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-}
-@keyframes fade {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-down {
-  0% {
-    opacity: 0;
-    transform: translateY(-2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes fade-up {
-  0% {
-    opacity: 0;
-    transform: translateY(2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes fade-left {
-  0% {
-    opacity: 0;
-    transform: translateX(2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes fade-right {
-  0% {
-    opacity: 0;
-    transform: translateX(-2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
+  
